--- a/peraco_website/src/App.css
+++ b/peraco_website/src/App.css
@@ -201,13 +201,16 @@ header nav a.active {
 /* Estilos para la imagen */
 .contact-image {
   flex: 1;
-  min-width: 300px; /* Ancho mínimo para la imagen */
+  max-width: 300px; /* Ancho mínimo para la imagen */
+  padding: 15px;
+  padding-left: 75px ;
 }
 
 .contact-image img {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Ajusta la imagen al contenedor */
+  border-radius: 10px;
 }
 
 /* Estilos para el formulario */
