--- a/peraco_website/src/App.css
+++ b/peraco_website/src/App.css
@@ -1,6 +1,6 @@
 /* Estilos generales */
 :root {
-  --color-primary: #8feb92c3; /* Azul principal */
+  --color-primary: #ffffff; /* Azul principal */
   --color-secondary: #1b8f31; /* Naranja secundario */
   --color-background: #f4f4f4; /* Fondo gris claro */
   --color-text: #333333; /* Texto oscuro */
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: 'Anton', sans-serif;
+  font-family: 'Anton', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin: 0 auto;
   padding: 0;
   background-color: var(--color-background);
@@ -36,11 +36,13 @@ header {
 header .logo {
   height: 15vh; /* Altura del logo */
   width: auto;
+  padding-left: 10px;
 }
 
 header nav {
   display: flex;
-  gap: 1rem;
+  gap: 3rem;
+  padding-right: 15px;
 }
 
 header nav a {
@@ -386,6 +388,7 @@ header nav a.active {
   width: 100%;
   height: 180px;
   object-fit: cover;
+  display: block;
 }
 
 .news-info {
@@ -517,6 +520,7 @@ header nav a.active {
   height: auto;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  display: block;
 }
 
 .news-detail-content {
@@ -645,7 +649,7 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+  background-color: rgb(96 96 96 / 50%); /* Fondo semitransparente */
   padding: 1rem;
   border-radius: 8px;
   max-width: 100%;
