--- a/peraco_website/src/App.css
+++ b/peraco_website/src/App.css
@@ -25,7 +25,7 @@ header {
   width: 98%;
   background-color: var(--color-primary);
   color: var(--color-text);
-  padding: 1rem;
+  padding: 1.5rem;
   z-index: 1000;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -526,7 +526,6 @@ header nav a.active {
 
 .news-detail-content {
   flex: 1;
-  font-family: 'Anton', sans-serif;
   color: #333;
 }
 
@@ -642,7 +641,7 @@ main {
 
 .hero-image {
   width: 100%;
-  height: 400px; /* Altura fija para las imágenes */
+  height: 500px; /* Altura fija para las imágenes */
   object-fit: cover; /* Ajusta la imagen al contenedor */
 }
 
@@ -712,15 +711,16 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  gap: 40px;
+  gap: 235px;
   flex-wrap: wrap;
 }
 
 .footer-column {
-  flex: 1;
+  flex: 1.5;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 8px;  
+  margin-left: 60px;
 }
 
 .footer-column h4 {
@@ -801,7 +801,7 @@ main {
   display: flex;
   gap: 15px;
   margin-top: 20px;
-  justify-content: center;
+  /*justify-content: center;*/
 }
 
 .footer-social a {
