--- a/peraco_website/src/App.css
+++ b/peraco_website/src/App.css
@@ -927,3 +927,15 @@ main {
     font-size: 1rem;
   }
 }
+/*Scrollbar*/
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-track{
+  background: #d5d4d4 ;
+}
+::-webkit-scrollbar-thumb{
+  background: var(--color-secondary) ;
+  border-radius: 12px;
+  border: 8px  dotted var(--color-secondary) ;
+}
